<resources>
    <string name="app_name">Colloquium.me</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="title_activity_main">MainActivity</string>

    <string-array name="drawer_array">
        <item>Add Event</item>
        <item>Home</item>
        <item>Event 1</item>
        <item>Event 2</item>
        <item>Chat</item>
        <item>Career</item>
        <item>Setting</item>
    </string-array>

    <string-array name="setting_primary_label_array">
        <item>App Feedback</item>
        <item>Privacy &amp; Terms</item>
        <item>About Us</item>
        <item>User Preferences</item>
    </string-array>

    <string-array name="setting_secondary_label_array">
        <item>Email us with app questions or feedback</item>
        <item>Info on how we protect and secure your data</item>
        <item>Learn about the developers of this app</item>
        <item>Setup or change user info and social options</item>
    </string-array>

    <string name="leave_chat">Leave Conversation</string>
    <string name="invite_chat">Invite Participants</string>

    <string name="fullscreen_content">Loading...</string>

    <string name="title_activity_first">FirstActivity</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="title_activity_third">ThirdActivity</string>
    <string name="title_activity_fourth">FourthActivity</string>
    <string name="title_activity_fifth">FifthActivity</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="empty"></string>
    <string name="hello_world">Hello world!</string>

    <!-- Activity Titles -->
    <string name="title_activity_chat">Chat</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_user_preference">User Settings</string>
    <string name="title_activity_discussion">Discussion</string>
    <string name="title_activity_addevent">Choose Event</string>
    <string name="title_activity_login">Log In</string>
    <string name="title_activity_signup">Sign Up</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_career">Career</string>
    <string name="title_activity_event_wrapper">Event Name</string>
    <string name="title_activity_career_detail">Career Details</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_chat_options">Select People</string>
    <string name="title_activity_about_us">About Us</string>
    <string name="title_activity_post_detail">Post Details</string>
    <string name="title_activity_conversation">Conversations</string>
    <string name="title_activity_talk_detail">Talk Details</string>
    <string name="title_activity_edit_chat">Edit Chat</string>
    <string name="title_activity_people_detail">People Details</string>
    <string name="title_activity_newchat">Invite Participants</string>
    <string name="title_activity_new_post">New Post</string>

    <!-- TAB SECTION -->
    <string name="title_eventpicker">Edit Events</string>
    <string name="title_home">Home</string>
    <string name="title_chat">Chat</string>
    <string name="title_career">Career</string>
    <string name="title_settings">Settings</string>
    <string name="title_people">People</string>
    <string name="title_news">News</string>
    <string name="title_newpost">New Post</string>
    <string name="title_login">Login</string>

    <!-- Fragment Titles -->
    <string name="title_overview">Overview</string>
    <string name="title_program">Program</string>
    <string name="title_attendee">People</string>
    <string name="title_timeline">Timeline</string>
    <string name="title_venue">Venue</string>

    <!-- LOGIN & SIGNUP & USERSETTINGS -->
    <string name="username">Username(Email)</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="institution">Institution</string>
    <string name="login">Log in</string>
    <string name="cancel">Cancel</string>
    <string name="back">Back</string>
    <string name="signup_reminder">Don\'t have an account yet?</string>
    <string name="signup">Sign up</string>
    <string name="signout">Sign Out</string>
    <string name="skip"><u>Skip</u></string>
    <string name="title_signup">Sign Up</string>
    <string name="login_notice">Welcome to Colloquium.me for Mathematics! Please sign up or log in below to start customizing your events.</string>
    <string name="signup_notice">Your information is kept secure and private on our servers. To view our privacy policy please go to Settings -> Privacy and Terms, or contact us if you have any questions.</string>
    <string name="login_first">Sorry, you do not seem to be a registered attendee. Email and chat functions will not be available. Remember, you must use the same email address you used to register for the workshop.</string>
    <string name="hint_search">Enter keywords here..</string>
    <string name="hint_comment">Comment..</string>
    <string name="hint_newpost">Share your thoughts..</string>
    <string name="emaillabel">Allow other users to email you</string>
    <string name="eventlabel">Receive event notifications</string>
    <string name="chatlabel">Receive chat notifications</string>
    <string name="sign_title">Not signed in yet</string>
    <string name="sign_detail_not">Sign in to access social features</string>
    <string name="sign_detail_yes">Sign out to swtich users</string>
    <string name="feedback_title">App Feedback</string>
    <string name="feedback_detail">Email us with app questions or feedback</string>
    <string name="admin_title">Administrative Assistance</string>
    <string name="admin_detail">Email us with event questions</string>
    <string name="priv_title">Privacy and Terms</string>
    <string name="priv_detail">Info on how we protect and secure your data</string>
    <string name="about_title">About Us</string>
    <string name="about_detail">Learn about the developers of this add</string>
    <string name="userpref_title">User Preferences</string>
    <string name="userpref_detail">Setup or change user info and social options</string>
    <string name="pull_to_refresh">Pull to refresh....</string>
    <string name="release_to_refresh">Release to refresh.</string>
    <string name="refreshing">Refreshing........</string>

    <!-- PROGRAM SWITCH -->
    <string name="switch_talk">Talks</string>
    <string name="switch_poster">Posters</string>
    <string name="switch_abstract">Attachments</string>

    <!-- LIST -->
    <string name="list_empty">--  No Result  --</string>
    <string name="title_conversation">Conversation</string>
    <string name="list_empty_empty"></string>
    <string name="list_empty_event">There are no announcements for this event yet</string>
    <string name="no_result">No result found.</string>

    <!-- DETAILS -->
    <string name="details">Details</string>
    <string name="contact">Contact</string>
    <string name="e_mail">Send email</string>
    <string name="website">Web Page</string>
    <string name="message">Message</string>
    <string name="abstract_btn">Attachment</string>
    <string name="more">more..</string>
    <string name="pdf">Open</string>
    <string name="post_by">Posted by:</string>
    <string name="unknown">(Unknown)</string>
    <string name="date">Date</string>
    <string name="comments">Comments</string>
    <string name="web">Web</string>
    <string name="positiontype">Position Type</string>
    <string name="save">Save</string>
    <string name="openbrowser">Open in browser</string>

    <!-- DETAILS (FAKE DATA) -->
    <string name="name_fake">NAME</string>
    <string name="author_fake">AUTHOR</string>
    <string name="description_fake">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="content_fake">@string/description_fake</string>
    <string name="organizer_fake">Organizer</string>
    <string name="start_time_fake">START TIME</string>
    <string name="position_fake">POSITION</string>
    <string name="location_fake">LOCATION</string>
    <string name="institution_fake">INSTITUTION</string>
    <string name="address_fake">1172–-1188 S San Pedro St, Los Angeles, CA 90015</string>

    <!-- SETTINGS -->
    <string name="attending">I am attending this event: </string>
    <string name="pref_title_notification">Notification</string>
    <string name="pref_title_about">About Us</string>
    <string name="pref_title_feedback">Feedback</string>
    <string name="pref_title_tech">Technical Assistance</string>
    <string name="pref_title_admin">Administrative Assistance</string>
    <string name="pref_title_terms">Privacy and Terms</string>
    <string name="pref_title_user">User Preferences</string>
    <string name="action_email_us">Email Us</string>
    <string name="action_close">Close</string>
    <string name="pref_subject_about">Colloquium.me</string>
    <string name="pref_subject_terms">Privacy Policy and Terms of Service</string>

    <string-array name="detail_title">
        <item>@string/pref_title_about</item>
        <item>@string/pref_title_terms</item>
    </string-array>
    <string-array name="detail_subject">
        <item>@string/pref_subject_about</item>
        <item>@string/pref_subject_terms</item>
    </string-array>
    <string-array name="detail_action">
        <item>@string/action_email_us</item>
        <item>@string/action_close</item>
    </string-array>

    <string-array name="days_array">
        <item>All</item>
        <item>Feb 19</item>
        <item>Feb 20</item>
        <item>Feb 21</item>
    </string-array>
    <string-array name="career_array">
        <item>New</item>
        <item>Position Available</item>
        <item>Seeking Position</item>
    </string-array>

    <!-- ERROR - SETTINGS -->
    <string name="error_not_login">Please log in first.</string>

    <!-- ERROR - NETWORK -->
    <string name="dialog_network_error_content">No internet connection. Please check your network settings</string>
    <string name="dialog_network_error_title">Network connection error</string>
    <string name="error_payment_failed">The Payment is failed!</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="feedback_email_address">csjan@tapgo.cc</string>
    <string name="privacy_url">http://colloquium.me/?page_id=3348</string>
    <string name="aboutus_url">http://colloquium.me</string>

    <string name="title_activity_fullscreen_reader">Reader</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

</resources>
