<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:facebook="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingLeft="@dimen/padding_horizontal"
              android:paddingRight="@dimen/padding_horizontal"
              android:paddingTop="20dp"
              android:paddingBottom="10dp"
              android:orientation="vertical"
              android:background="@color/dark_bg" >
    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="30dp"
              android:layout_marginBottom="50dp"
              android:alpha="1"
              android:gravity="left"
              android:fontFamily="sans-serif"
              android:textColor="@color/light_primary"
              android:text="@string/login_notice"
              android:textSize="16dp"/>
    <EditText  android:id="@+id/username"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:padding="12dp"
               android:background="@color/light_bg"
               android:singleLine="true"
               android:inputType="textPersonName"
               android:fontFamily="sans-serif"
               android:hint="@string/email"
               android:textColorHint="@color/hint_color"
               android:minWidth="120dp"
               android:maxWidth="260dp" />
    <View android:layout_width="match_parent"
          android:layout_height="1dip"
          android:background="@color/background" />
    <EditText  android:id="@+id/password"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:padding="12dp"
               android:background="@color/light_bg"
               android:singleLine="true"
               android:inputType="textPassword"
               android:fontFamily="sans-serif"
               android:hint="@string/password"
               android:textColorHint="@color/hint_color"
               android:minWidth="120dp"
               android:maxWidth="260dp" />
    <Button android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"
            android:background="@color/accent_color"
            android:onClick="login"
            android:fontFamily="sans-serif"
            android:textColor="@color/light_button_txt"
            android:text="@string/login" />
    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:alpha="0.7"
              android:gravity="center"
              android:fontFamily="sans-serif"
              android:textColor="@color/light_primary"
              android:text="@string/signup_reminder" />
    <Button android:id="@+id/btn_signup"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@color/accent_color"
            android:onClick="toSignupPage"
            android:fontFamily="sans-serif"
            android:textColor="@color/light_button_txt"
            android:text="@string/signup" />
    <Button android:id="@+id/btn_skip"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"
            android:background="@color/accent_color"
            android:onClick="skip"
            android:fontFamily="sans-serif"
            android:textColor="@color/light_button_txt"
            android:text="@string/skip" />

</LinearLayout>