<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingLeft="@dimen/padding_horizontal"
              android:paddingRight="@dimen/padding_horizontal"
              android:paddingTop="20dp"
              android:paddingBottom="10dp"
              android:orientation="vertical"
              android:background="@color/background" >
    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginBottom="20dp"
              android:alpha="1"
              android:gravity="left"
              android:fontFamily="sans-serif"
              android:textColor="@color/light_button_txt"
              android:text="@string/signup_notice"
              android:textSize="16dp"/>
    <EditText  android:id="@+id/username"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:padding="12dp"
               android:background="@color/light_bg"
               android:singleLine="true"
               android:inputType="textEmailAddress"
               android:fontFamily="sans-serif"
               android:hint="@string/email"
               android:textColorHint="@color/hint_color"
               android:minWidth="120dp"
               android:maxWidth="260dp" />
    <View android:layout_width="match_parent"
          android:layout_height="1dip"
          android:background="@color/background" />
    <EditText  android:id="@+id/password"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:padding="12dp"
               android:background="@color/light_bg"
               android:singleLine="true"
               android:inputType="textPassword"
               android:fontFamily="sans-serif"
               android:hint="@string/password"
               android:textColorHint="@color/hint_color"
               android:minWidth="120dp"
               android:maxWidth="260dp" />
    <View android:layout_width="match_parent"
          android:layout_height="1dip"
          android:background="@color/light_primary" />
    <EditText  android:id="@+id/firstname"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:padding="12dp"
               android:background="@color/light_bg"
               android:singleLine="true"
               android:fontFamily="sans-serif"
               android:hint="@string/firstname"
               android:textColorHint="@color/hint_color"
               android:minWidth="120dp"
               android:maxWidth="260dp" />
    <View android:layout_width="match_parent"
          android:layout_height="1dip"
          android:background="@color/light_primary" />
    <EditText  android:id="@+id/lastname"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:padding="12dp"
               android:background="@color/light_bg"
               android:singleLine="true"
               android:fontFamily="sans-serif"
               android:hint="@string/lastname"
               android:textColorHint="@color/hint_color"
               android:minWidth="120dp"
               android:maxWidth="260dp" />
    <View android:layout_width="match_parent"
          android:layout_height="1dip"
          android:background="@color/light_primary" />
    <EditText  android:id="@+id/institution"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:padding="12dp"
               android:background="@color/light_bg"
               android:singleLine="true"
               android:fontFamily="sans-serif"
               android:hint="@string/institution"
               android:textColorHint="@color/hint_color"
               android:minWidth="120dp"
               android:maxWidth="260dp" />
    <Button android:id="@+id/btn_signup"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/accent_color"
            android:onClick="signup"
            android:fontFamily="sans-serif"
            android:textColor="@color/light_button_txt"
            android:text="@string/signup" />
    <Button android:id="@+id/btn_back"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/accent_color"
            android:onClick="toLoginPage"
            android:fontFamily="sans-serif"
            android:textColor="@color/light_button_txt"
            android:text="@string/back" />
</LinearLayout>