<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/feed_container"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/list_margin"
    android:background="@drawable/list_item"
    android:gravity="start"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/program_name"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:ellipsize="end"
        android:fontFamily="sans-serif"
        android:gravity="center|left"
        android:singleLine="true"
        android:text="@string/name_fake"
        android:textColor="@color/primary_text"
        android:textSize="18sp"
        />

    <TextView
        android:id="@+id/program_authorname"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:layout_alignLeft="@+id/program_name"
        android:layout_alignRight="@+id/program_name"
        android:layout_below="@+id/program_name"
        android:layout_marginBottom="2dp"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif-light"
        android:gravity="center|left"
        android:text="@string/author_fake"
        android:textColor="@color/primary_text"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/program_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/program_authorname"
        android:layout_alignRight="@+id/program_name"
        android:layout_below="@+id/program_authorname"
        android:layout_marginBottom="@dimen/list_margin"
        android:ellipsize="end"
        android:fontFamily="sans-serif"
        android:lineSpacingExtra="2sp"
        android:maxLines="3"
        android:text="@string/description_fake"
        android:textColor="@color/dark_primary"
        android:textSize="14sp" />


    <TextView
        android:id="@+id/program_locationname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/program_name"
        android:layout_below="@+id/program_content"
        android:fontFamily="sans-serif-thin"
        android:gravity="center|left"
        android:text="@string/location_fake"
        android:textColor="@color/secondary_text"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/program_starttime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/program_content"
        android:layout_toRightOf="@+id/program_locationname"
        android:layout_marginLeft="@dimen/list_margin"
        android:fontFamily="sans-serif-thin"
        android:gravity="center"
        android:text="@string/start_time_fake"
        android:textColor="@color/secondary_text"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView android:id="@+id/program_more"
              android:layout_width="wrap_content"
              android:layout_height="24dp"
              android:layout_marginRight="@dimen/list_padding"
              android:layout_below="@+id/program_content"
              android:layout_alignRight="@+id/program_name"
              android:gravity="center|right"
              android:layout_weight="1"
              android:text="@string/more"
              android:textColor="@color/dark_accent"
              android:maxLines="1"
              android:textSize="14sp" />
</RelativeLayout>