<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/list_margin"
                android:background="@drawable/list_item"
                tools:context="com.ashvale.cmmath_one.CareerDetailActivity">

    <TextView
        android:id="@+id/inst_str"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:gravity="left"
        android:text="@string/institution"
        android:textColor="@color/secondary_text"
        android:textSize="16sp" />
    <TextView
        android:id="@+id/inst_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/inst_str"
        android:layout_marginLeft="@dimen/list_padding"
        android:fontFamily="sans-serif"
        android:gravity="left"
        android:text="@string/institution_fake"
        android:textColor="@color/primary_text"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/contact_name_str"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/inst_str"
        android:gravity="left"
        android:fontFamily="sans-serif"
        android:text="@string/contact"
        android:textColor="@color/secondary_text"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/contact_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/contact_name_str"
        android:layout_toLeftOf="@+id/email_button"
        android:layout_marginLeft="@dimen/list_padding"
        android:fontFamily="sans-serif"
        android:gravity="left"
        android:text="@string/name_fake"
        android:textColor="@color/primary_text"
        android:textSize="16sp"
        android:layout_below="@+id/inst_label"/>
    <Button
        android:id="@+id/email_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/inst_label"
        android:layout_alignParentRight="true"
        android:text="@string/e_mail"
        style="?android:attr/borderlessButtonStyle"/>

    <TextView
        android:id="@+id/web_str"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/contact_name_str"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/website"
        android:textColor="@color/secondary_text"
        android:textSize="16sp"/>
    <TextView
        android:id="@+id/web_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/contact_name_label"
        android:layout_toRightOf="@+id/web_str"
        android:layout_marginLeft="@dimen/list_padding"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="Web Page"
        android:textColor="@color/primary_text"
        android:textSize="16sp"/>
    <TextView
        android:id="@+id/content_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/web_str"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="content"
        android:textColor="@color/primary_text"
        android:textSize="14sp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Open in browser"
        android:id="@+id/web_button"
        android:layout_below="@+id/email_button"/>

</RelativeLayout>
