<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@color/background">
    <RelativeLayout android:id="@+id/container"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:padding="@dimen/list_margin"
                  android:background="@drawable/list_item"
                  android:orientation="vertical" >
        <TextView
            android:id="@+id/person_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/list_padding"
            android:fontFamily="sans-serif"
            android:gravity="center|left"
            android:text="@string/author_fake"
            android:textColor="@color/primary_text"
            android:textSize="18sp"/>
        <TextView android:id="@+id/person_institution"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginBottom="@dimen/list_padding"
                  android:layout_below="@+id/person_name"
                  android:fontFamily="sans-serif"
                  android:gravity="center|left"
                  android:text="@string/institution_fake"
                  android:textColor="@color/dark_primary"
                  android:textSize="14sp" />
        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_below="@+id/person_institution"
                      android:weightSum="3"
                      android:orientation="horizontal" >
            <Button
                android:id="@+id/person_email"
                android:background="#FFFFFFFF"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/e_mail"
                android:textColor="@color/dark_accent"
                android:textSize="14sp"
                style="?android:attr/borderlessButtonStyle"/>
            <Button
                android:id="@+id/person_link"
                android:background="#FFFFFFFF"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/website"
                android:textColor="@color/dark_accent"
                android:textSize="14sp"
                style="?android:attr/borderlessButtonStyle"/>
            <Button
                android:id="@+id/person_message"
                android:background="#FFFFFFFF"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/message"
                android:textColor="@color/dark_accent"
                android:textSize="14sp"
                android:visibility="invisible"
                style="?android:attr/borderlessButtonStyle"/>
        </LinearLayout>
    </RelativeLayout>
    <ListView android:id="@+id/talkListView"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_below="@+id/container"
              android:paddingTop="6dp"
              android:background="@color/background"
              android:divider="@color/divider_color"
              android:dividerHeight="0dp"/>
    <TextView android:id="@android:id/empty"
              android:layout_width="match_parent"
              android:layout_height="120dp"
              android:gravity="center"
              android:textColor="@color/dark_accent"
              android:textSize="14sp"
              android:text="@string/list_empty_empty" />
</RelativeLayout>
